# fastapi-uv

./: .gitignore  ARCHITECTURE.md  CHANGELOG.md  DEPLOYMENT.md  Dockerfile  README.md  USAGE.md  docker-compose.yml  env.example  fastapi.service  fastapi.sh  main.py  pyproject.toml  requirements.txt  supervisor_fastapi.conf  xzutils
app/: app.py  application.py  config.py  dependencies.py  models.py
app/api/: __init__.py  auth.py  examples.py  health.py  kv_cache_api.py  routes.py
common/: __init__.py  kv_cache.py  kv_cache_example.py  kv_sqlite.py
services/: __init__.py  example_service.py
