[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fastapi-uv"
version = "0.1.0"
description = "A FastAPI template with uv"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.104.1",
    "uvicorn[standard]>=0.24.0",
    "python-dotenv>=1.0.0",
    "slowapi>=0.1.9",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "gunicorn>=23.0.0",
]

[tool.setuptools.packages.find]
include = ["app*", "services*"]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.3",
    "pytest-asyncio>=0.21.1",
    "httpx>=0.25.2",
    "ruff>=0.1.7",
]
[[tool.uv.index]]
url = "http://mirrors.aliyun.com/pypi/simple/"
default = true

